docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_raised-cards.scss
@use '../functions/general' as *;
@use '../functions/color' as *;
@use '../mixins/theme' as *;
@use '../mixins/decorative' as *;
@use '../mixins/icons' as *;

$container-small: hb-calculate-rems(576px);
$container-medium: hb-calculate-rems(768px);

.hb-raised-cards {
  // The uniform-height modifier adds the ability for cards to be consistent height regardless of content.
  &--uniform-height .hs-paragraph-style .ptype-hs-postcard,
  &--uniform-height .hs-paragraph-style .hb-grid__item,
  &--uniform-height .hb-grid .hb-grid__item,
  &--uniform-height .field-hs-collection-items .ptype-hs-postcard {
    display: flex;

    & div:only-child:not(.hb-card__date-tile, .hb-pill) {
      width: 100%;
    }
  }

  &--uniform-height .hs-paragraph-style .paragraph-item .hb-card,
  &--uniform-height
    .hs-paragraph-style
    .paragraph-item
    .hb-vertical-linked-card,
  &--uniform-height
    .field-hs-collection-items
    .paragraph-item
    .hb-vertical-linked-card,
  &--uniform-height .field-hs-collection-items .paragraph-item .hb-card,
  &--uniform-height .hb-timeline,
  &--uniform-height .hb-timeline .hb-timelime__wrapper {
    height: 100%;
  }

  &--uniform-height .hb-vertical-linked-card {
    .hb-vertical-linked-card__description {
      flex-grow: 1;
    }
  }


  // Raised cards uniform height styles for Testimonial & Timeline
  &--uniform-height .field-hs-collection-items .ptype-hs-testimonial,
  &--uniform-height .field-hs-collection-items .ptype-hs-timeline {
    & div:not([class]):only-child:not(.hb-card__date-tile, .hb-pill), // necessary for logged out state
    & div.contextual-region {
      // necessary for logged in state
      height: 100%;
    }
  }

  &--uniform-height .field-hs-collection-items .paragraph-item .hb-testimonial {
    display: flex;
    height: inherit;

    &__wrapper {
      width: 100%;
    }
  }

  .hb-card {
    flex-grow: 1;
    background-color: color('white', 'global');

    @include hb-traditional {
      box-shadow: hb-calculate-rems(1px) hb-calculate-rems(3px)
        hb-calculate-rems(17px) color('gray-medium', 'global');
    }

    @include hb-themes(('airy', 'colorful')) {
      box-shadow: hb-calculate-rems(1px) hb-calculate-rems(7.5px)
        hb-calculate-rems(35px)
        color-mix(in srgb, color('black', 'global') 12%, transparent);

      @supports (object-fit: cover) {
        align-items: stretch;

        &__graphics {
          margin: 0;

          img {
            height: 100%;
            object-fit: cover;
          }
        }

        &__img {
          height: 100%;
        }

        &.hb-card--horizontal {
          .hb-card__img *:not(.field-media-image-caption) {
            height: 100%;
          }

          .hb-caption-credit-image > [data-once='contextual-render'] {
            position: absolute;
          }
        }
      }

      &.hb-card--horizontal-date-stacked.hb-card--no-image {
        .hb-card__graphics--has-date {
          .hb-card__date-tile {
            top: hb-calculate-rems(22px);
            left: hb-calculate-rems(-14px);
          }

          + .hb-card__content {
            padding-left: 0;
          }
        }
      }

      &.hb-card--date-stacked.hb-card--no-image {
        .hb-card__date-tile {
          top: hb-calculate-rems(22px);
          left: hb-calculate-rems(-14px);
        }
      }
    }
  }

  // Card content padding adjustments for raised cards.
  .hb-vertical-card,
  .hb-card--date-stacked {
    .hb-card__content {
      @include hb-themes(('colorful', 'airy')) {
        padding-inline: hb-calculate-rems(16px);

        @container card (width > #{$container-small}) {
          padding-inline: hb-calculate-rems(32px);
        }
      }

      @include hb-traditional {
        padding-inline: hb-calculate-rems(14px);

        @container card (width > #{$container-small}) {
          padding-inline: hb-calculate-rems(24px);
        }
      }
    }

    &.hb-card--no-image {
      .hb-card__content {
        @include hb-themes(('colorful', 'airy')) {
          padding-inline: hb-calculate-rems(20px);

          @container card (width > #{$container-small}) {
            padding-inline: hb-calculate-rems(32px);
          }
        }

        @include hb-traditional {
          padding-inline: hb-calculate-rems(24px);

          @container card (width > #{$container-small}) {
            padding-inline: hb-calculate-rems(32px);
          }
        }
      }
    }
  }

  .hb-card--horizontal {
    .hb-card__content {
      // Padding for horizontal cards without image.
      @include hb-themes(('colorful', 'airy')) {
        padding-inline: hb-calculate-rems(20px);

        @container card (width > #{$container-small}) {
          padding-inline: hb-calculate-rems(32px);
        }
      }

      @include hb-traditional {
        padding-inline: hb-calculate-rems(24px);

        @container card (width > #{$container-small}) {
          padding-inline: hb-calculate-rems(32px);
        }
      }
    }

    &:has(.hb-card__graphics) {
      .hb-card__content {
        @include hb-themes(('colorful', 'airy')) {
          padding-inline: hb-calculate-rems(16px);
        }

        @include hb-traditional {
          padding-inline: hb-calculate-rems(4px);
        }
      }

      &.hb-card--horizontal--left {
        .hb-card__content {
          @include hb-themes(('colorful', 'airy')) {
            @container card (width > #{$container-small}) {
              padding-inline: hb-calculate-rems(12px) hb-calculate-rems(24px);
            }

            @container card (width > #{$container-medium}) {
              padding-inline: hb-calculate-rems(20px) hb-calculate-rems(32px);
            }
          }

          @include hb-traditional {
            @container card (width > #{$container-small}) {
              padding-inline: hb-calculate-rems(20px) 0;
            }

            @container card (width > #{$container-medium}) {
              padding-inline: hb-calculate-rems(32px) 0;
            }
          }
        }
      }

      &.hb-card--horizontal--right {
        .hb-card__content {
          @include hb-themes(('colorful', 'airy')) {
            @container card (width > #{$container-small}) {
              padding-inline: hb-calculate-rems(24px) hb-calculate-rems(12px);
            }

            @container card (width > #{$container-medium}) {
              padding-inline: hb-calculate-rems(32px) hb-calculate-rems(20px);
            }
          }

          @include hb-traditional {
            @container card (width > #{$container-small}) {
              padding-inline: 0 hb-calculate-rems(20px);
            }

            @container card (width > #{$container-medium}) {
              padding-inline: 0 hb-calculate-rems(32px);
            }
          }
        }
      }
    }
  }

  .hb-testimonial,
  .hb-timelime__wrapper {
    @include hb-raised-cards-shadow;

    background-color: color('white', 'global');
    padding: hb-spacing-width('md') hb-spacing-width('xs');
    margin-top: 0;
  }

  .hb-testimonial {
    padding: 0;
  }

  .hb-vertical-button-card {
    box-shadow: none;

    @include hb-traditional {
      padding: 0;
    }

    @include hb-themes(('airy', 'colorful')) {
      background-color: transparent;
    }
  }
}

// Colorful: all vertical cards in views with a `.hb-raised-cards` parent
// container will have the bottom accent line.
// .hb-raised-cards can be on the view or outside, so we add both cases.
.hb-raised-cards .views-element-container,
.views-element-container .hb-raised-cards {
  .hb-vertical-card,
  .hb-card--date-stacked {
    @include hb-themes(('airy', 'colorful')) {
      border-bottom: hb-calculate-rems(4px) solid color('secondary');
    }
  }
}

// Dark Pattern and Inversion settings for hb-card, placed here because of the order of the classes when applied
.hb-raised-cards .hb-dark-pattern .hb-card,
.hb-dark-inversion .hb-raised-cards .views-element-container .hb-card {
  color: color('black', 'global');

  .field-content,
  .views-label {
    color: color('black', 'global');
  }

  a {
    color: color('tertiary');

    &:hover,
    &:focus {
      color: color('tertiary-darken-20');
    }
  }

  &__date-tile {
    .field-content {
      @include hb-themes(('airy', 'colorful')) {
        color: color('white', 'global');
      }
    }

    &-month .field-content {
      @include hb-traditional {
        color: color('white', 'global');
      }
    }

    &-day .field-content {
      @include hb-traditional {
        color: color('primary');
      }
    }
  }

  &__title a {
    @include hb-themes(('airy', 'colorful')) {
      border-bottom-color: color('tertiary');

      &:hover,
      &:focus {
        border-bottom-color: color('tertiary-darken-20') !important;
      }
    }

    @include hb-traditional {
      color: color('black', 'global');
      text-decoration-color: color('black', 'global');

      &:hover,
      &:focus {
        text-decoration-color: color('tertiary-darken-20');
      }
    }
  }

  &__decorative-link a {
    @include hb-themes(('airy', 'colorful')) {
      color: transparent;

      &:hover,
      &:focus {
        color: transparent;
      }
    }

    @include hb-traditional {
      &::after {
        @include hb-icon-link-arrow('tertiary');
        mask-size: 85%;
      }

      &:hover,
      &:focus {
        &::after {
          background-color: color('tertiary-darken-20');
        }
      }
    }
  }
}

